infra/production/k8s/driver-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
        - name: driver-service
          image: placeholder/driver-service
          ports:
            - name: grpc
              containerPort: 9092
            - name: http
              containerPort: 8082
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: driver-service
spec:
  selector:
    app: driver-service
  ports:
    - name: grpc
      port: 9092
      targetPort: 9092
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
