infra/production/k8s/login-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: IMAGE_PLACEHOLDER/login-service
          ports:
            - name: http
              containerPort: 8085
            - name: grpc
              containerPort: 9095
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 9095
      targetPort: 9095
  type: ClusterIP
