infra/production/k8s/trip-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
        - name: trip-service
          image: IMAGE_PLACEHOLDER/trip-service
          ports:
            - name: http
              containerPort: 8083
            - name: grpc
              containerPort: 9093
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  selector:
    app: trip-service
  ports:
    - port: 8083
      name: http
      targetPort: 8083
    - port: 9093
      name: grpc
      targetPort: 9093
  type: ClusterIP
